MDEV-36852 Table definition gets corrupt after adding unique hash key